Implement the new receipt API (#44)
* feat(receipt): update the value of mmr_proof field in receipt api

* perf(receipt): use receipt_proof as string type in receipt resp

* test(recepit): add test case for receipt api

* fix(util): fix the bug that exiting code 1 anytime asserts

* perf(receipt): re-order the fields of the receipt resp

* fix(cache): fix the fetch method while getting headers by hash

* perf(http): supports format as query params in shadow http API
