# api/docs/swagger.yaml
@@ -23,13 +23,50 @@ definitions:
     type: object
   core.GetReceiptResp:
     properties:
+      header:
+        $ref: '#/definitions/eth.DarwiniaEthHeader'
+        type: object
       mmr_proof:
         items:
           type: string
         type: array
       receipt_proof:
-        $ref: '#/definitions/eth.ProofRecord'
-        type: object
+        type: string
+    type: object
+  eth.DarwiniaEthHeader:
+    properties:
+      author:
+        type: string
+      difficulty:
+        type: integer
+      extra_data:
+        type: string
+      gas_limit:
+        type: integer
+      gas_used:
+        type: integer
+      hash:
+        type: string
+      log_bloom:
+        type: string
+      number:
+        type: integer
+      parent_hash:
+        type: string
+      receipts_root:
+        type: string
+      seal:
+        items:
+          type: string
+        type: array
+      state_root:
+        type: string
+      timestamp:
+        type: integer
+      transactions_root:
+        type: string
+      uncles_hash:
+        type: string
     type: object
   eth.DarwiniaEthHeaderHexFormat:
     properties:
@@ -76,15 +113,6 @@ definitions:
         items:
           type: string
         type: array
-    type: object
-  eth.ProofRecord:
-    properties:
-      header_hash:
-        type: string
-      index:
-        type: string
-      proof:
-        type: string
     type: object
   types.Header:
     properties:
@@ -238,6 +266,11 @@ paths:
         name: tx
         required: true
         type: string
+      - description: last confirm block
+        in: query
+        name: last
+        required: true
+        type: number
       produces:
       - application/json
       responses:
